# gianni-frp

./: .gitignore  ChangeLog.md  LICENSE  Main.hs  frp.cabal  h.hs  stack.yaml
